deps/v8/test/message/fail/array-spread-non-iterable-object.out
*%(basename)s:5: TypeError: a is not iterable
[...(a={})]
      ^
TypeError: a is not iterable
    at *%(basename)s:5:7
